--- a/styles.css
+++ b/styles.css
@@ -7,10 +7,14 @@ P.blocktext {
 }
 body {font-family:Arial, Helvetica, sans-serif;}
 DIV.container {
-	min-height: 10em;
-	display: table-cell;
-	vertical-align: middle	}
+	margin: 0 auto;
+	width: 50%;
+	padding 10px;
+}
 
+DIV.subsection {
+	text-indent:30px;
+}
 section {
         background: black;
         color: white;
@@ -20,7 +24,8 @@ section {
         top: 50%;
         left: 50%;
         margin-right: -50%;
-        transform: translate(-50%, -50%) }
+        transform: translate(-50%, -50%) ;
+}
 
 
 label{
